web/src/main/webapp/includes/styles.css
/* ... */
.single_select_cell_last{
	border-top-width: 0px;
	border-bottom-width: 1px;
}

.annotated_item{
	opacity: 0.7;
	filter: alpha(opacity=40);
	margin: 0;
	padding: 0;
	border: 0;
}

div.annotation_text{
	position: absolute; 
	visibility: hidden;
	z-index: 100;
}

span.annotation_text{ 
	font-family: Arial;
	font-weight: bold;
	font-size: 110%;
	color: red; 
}

td.annotated_itemOID{
	padding-top: 5px;
	padding-bottom: 5px;
	horizontal-align: center;
}

span.annotated_itemOID{
	font-family: Arial;
	font-weight: bold;
	font-size: 110%;
	color: #00B050; 
	background:#ffffcc;
}

td.annotated_groupOID{
	padding-top: 3px;
	padding-bottom: 3px;
	padding-left: 2px;
}

span.annotated_groupOID{
	font-family: Arial;
	font-weight: bold;
	font-size: 110%;
	color: #ffab29; 
	background:#ffffcc;
}

td.annotated_crfOID{
	padding-top: 3px;
	padding-bottom: 5px;
}

span.annotated_crfOID, span.annotated_eventOID{
	font-family: Arial;
	font-weight: bold;
	font-size: 110%;
	color: red; 
	background:#ffffcc;
}

.w250 {
	width: 250px;
}

.bw1 {
	border-width: 1px;
}

.bw2 {
	border-width: 2px;
}

.pb10 {
	padding-bottom:10px;
}

.h15 {
	height:15px;
}

.h20 {
	height:20px;
}

.maxw250 {
	max-width: 250px;
}

.w150 {
	width: 150px;
}

.header_crf_cell {
    border: 1px solid #c5c5c5;
    border-spacing: 10px;
    border-collapse: separate;
    padding: 1px;
    padding-left: 5px;
    color: #789EC5;
}

a.dataEntryLink {
    cursor: pointer;
}

a.sdvItemLink {
    padding-left: 5px;
    padding-right: 5px;
    cursor: pointer;
}

table.footerInnerTable {
	width: 1024px;
}

